--- a/client/src/pages/Home/components/styles/Landing.sass
+++ b/client/src/pages/Home/components/styles/Landing.sass
@@ -1,5 +1,4 @@
 #landing-container
-  position: fixed
   top: 0
   left: 0
   width: 100%
@@ -12,14 +11,21 @@
 // media query font-size
 h1
   width: min-content
-  font-family: 'Manrope', sans-serif
-  font-weight: 800
   font-size: 15rem
   line-height: 0.85
   letter-spacing: -0.5rem
+  margin-bottom: 0px
+  padding-bottom: 0px
+
+h6
+  font-size: 1.35rem
+  padding-top: 0
+  margin-top: 1.5rem
+  letter-spacing: .2rem
 
 #main-title-container
   width: 50%
   display: flex
+  flex-direction: column
   justify-content: center
   align-items: center
