--- a/client/src/shared/styles/Navigation.sass
+++ b/client/src/shared/styles/Navigation.sass
@@ -1,18 +1,18 @@
-nav 
+nav
+  position: fixed
+  top: 0
+  left: 0
   width: 100%
   display: flex
   justify-content: center
   z-index: 2
-
+  background-color: #ffffff
+  
 li 
   width: fit-content
   text-decoration: none
 
 a 
-  text-decoration: none
-  color: black
-  font-family: 'Manrope', sans-serif
-  font-weight: 800
   letter-spacing: -0.25px
 
 // add media queries for width
@@ -21,3 +21,4 @@ ul
   justify-content: space-evenly
   width: 50%
   list-style: none
+  padding-left: 0px
