--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -43,7 +43,7 @@ h6,
 p,
 a,
 button
-  font-family: 'Manrope', sans-serif
+  font-family: 'Manrope', sans-serif !important
   color: #000000
  
 h1,
