--- a/client/src/pages/Home/components/styles/SkillsCard.sass
+++ b/client/src/pages/Home/components/styles/SkillsCard.sass
@@ -6,16 +6,14 @@
 
   
 .skills-card-container
-  position: absolute
-  top: 0  
+  position: fixed
   left: 0
+  top: 0
   width: 100%
   height: 100%
   background-color: black
   z-index: 2000
   color: white
-  dispaly: flex
-  justify-content: center
 
 #skills-card-head
   padding-top: 1rem
