--- a/client/src/shared/styles/Landing.sass
+++ b/client/src/shared/styles/Landing.sass
@@ -1,21 +1,23 @@
-#landing-container
+.landing-container
   top: 0
   left: 0
   width: 100%
   height: 100vh
   display: flex
   justify-content: center
-  align-items: center
 
 
 // media query font-size
 h1
-  width: min-content
-  font-size: 15rem
+  font-family: 'Manrope', sans-serif !important
+  width: fit-content
+  font-size: 8rem
   line-height: 0.85
-  letter-spacing: -0.5rem
+  margin-top: 0px
   margin-bottom: 0px
+  padding-left: 0px
   padding-bottom: 0px
+  padding-top: 0px
 
 h6
   font-size: 1.35rem
@@ -23,9 +25,20 @@ h6
   margin-top: 1.5rem
   letter-spacing: .2rem
 
-#main-title-container
-  width: 50%
+h5
+  text-align: left
+  width: 100%
+  font-size: 3rem
+  margin-top: 0px
+  margin-bottom: 0px
+  font-weight: 300
+
+.main-title-container
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
+
+
+.main-title-container .case-study
+  align-tems: left
