--- a/client/src/pages/Home/components/styles/Connect.sass
+++ b/client/src/pages/Home/components/styles/Connect.sass
@@ -9,10 +9,31 @@
   width: 100%
   max-width: 800px
   margin: 0 auto
+  border-radius: 2%
 
+.connect-form-button
+  font-size: 1.5rem
+  padding: 1rem 5rem
+  color: black
+  font-family: 'Manrope', sans-serif !important
+  background-color: transparent !important
+  border: 1px solid #ced4da
+
+  &:hover
+    background-color: #ced4da!important
+    color: black
+    border: 1px solid #ced4da
+
+.connect-form-button-container
+  margin-top: 1rem
+  justify-content: center !important
 
 .connect-form-input
-  height: 1.5rem
+  margin-top: 2rem
+  font-size: 1.5rem
+  border-top: none
+  border-left: none
+  border-right: none
 
 .connect-form-input-container
   display: flex
