--- a/client/src/shared/styles/Landing.sass
+++ b/client/src/shared/styles/Landing.sass
@@ -11,7 +11,7 @@
 h1
   font-family: 'Manrope', sans-serif !important
   width: fit-content
-  font-size: 8rem
+  font-size: 10rem
   line-height: 0.85
   margin-top: 0px
   margin-bottom: 0px
@@ -39,6 +39,19 @@ h5
   justify-content: center
   align-items: center
 
-
 .main-title-container .case-study
   align-tems: left
+
+
+.react-rotating-text-cursor
+  animation: blinking-cursor 0.8s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s infinite;
+
+@keyframes blinking-cursor
+  0%
+    opacity: 0
+  
+  50%
+    opacity: 1
+  
+  100%
+    opacity: 0
