--- a/client/src/pages/Admin/PostEditor/PostEditor.sass
+++ b/client/src/pages/Admin/PostEditor/PostEditor.sass
@@ -1,5 +1,12 @@
+.title-input
+  border: none
+  font-size: 3rem
+  font-family: 'Manrope', sans-serif
+  font-weight: 200 
+  
 .post-editor-container
-  height: 100vh
+  height: 100%
+  min-height: 100vh
   width: 100%
   display: flex
   justify-content: center
