--- a/client/src/shared/styles/TextSection.sass
+++ b/client/src/shared/styles/TextSection.sass
@@ -1,5 +1,9 @@
 p
-  font-size: 1.3rem
+  font-size: 1.5rem
   letter-spacing: 0.11rem
-  line-height: 1.8
+  line-height: 2
   padding-bottom: 1rem
+
+
+.section-head
+  margin-bottom: 2rem
