--- a/client/src/pages/Home/components/styles/Connect.sass
+++ b/client/src/pages/Home/components/styles/Connect.sass
@@ -10,6 +10,7 @@
   max-width: 800px
   margin: 0 auto
   border-radius: 2%
+  min-height: 500px
 
 .connect-form-button
   font-size: 1.5rem
@@ -96,3 +97,86 @@
   display: flex
   justify-content: space-between
   margin-bottom: 1rem
+
+.connect-status-body
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  height: 100%
+  width: 100%
+  min-height: 500px
+
+// svg animations
+
+svg 
+  width: 100px
+  display: block
+  margin: 40px auto 0
+
+
+.path 
+  stroke-dasharray: 1000
+  stroke-dashoffset: 0
+  &.circle 
+    -webkit-animation: dash .9s ease-in-out
+    animation: dash .9s ease-in-out
+  
+  &.line 
+    stroke-dashoffset: 1000
+    -webkit-animation: dash .9s .35s ease-in-out forwards
+    animation: dash .9s .35s ease-in-out forwards
+  
+  &.check 
+    stroke-dashoffset: -100
+    -webkit-animation: dash-check .9s .35s ease-in-out forwards
+    animation: dash-check .9s .35s ease-in-out forwards
+  
+
+
+.status-message 
+  text-align: center
+  margin: 20px 0 60px
+  font-size: 1.25em
+  &.success 
+    color: #73AF55
+  
+  &.error 
+    color: #D06079
+  
+
+
+
+@-webkit-keyframes dash 
+  0% 
+    stroke-dashoffset: 1000
+  
+  100% 
+    stroke-dashoffset: 0
+  
+
+
+@keyframes dash 
+  0% 
+    stroke-dashoffset: 1000
+  
+  100% 
+    stroke-dashoffset: 0
+  
+
+
+@-webkit-keyframes dash-check 
+  0% 
+    stroke-dashoffset: -100
+  
+  100% 
+    stroke-dashoffset: 900
+  
+
+
+@keyframes dash-check 
+  0% 
+    stroke-dashoffset: -100
+  
+  100% 
+    stroke-dashoffset: 900
