media queries home page

--- a/client/src/pages/Home/components/styles/Work.sass
+++ b/client/src/pages/Home/components/styles/Work.sass
@@ -12,3 +12,21 @@
 
 #work-container
   margin-bottom: 10rem
+
+
+@media screen and ( max-width: 991px)
+  .case-study-links
+    font-size: 5rem
+
+@media screen and ( max-width: 767px)
+  .case-study-links
+    font-size: 4rem
+
+
+@media screen and ( max-width: 549px)
+  .case-study-links
+    font-size: 3rem
+
+@media screen and ( max-width: 448px)
+  .case-study-links
+    font-size: 3rem
