--- a/client/src/shared/styles/Landing.sass
+++ b/client/src/shared/styles/Landing.sass
@@ -56,3 +56,24 @@ h5
   
   100%
     opacity: 0
+
+@media screen and ( max-width: 1199px  )
+  h1
+    font-size: 8rem
+
+@media screen and ( max-width: 991px)
+  h1
+    font-size: 6rem
+
+@media screen and ( max-width: 767px)
+  h1
+    font-size: 5rem
+
+@media screen and ( max-width: 549px)
+  h1
+    font-size: 4rem
+
+
+@media screen and ( max-width: 448px)
+  h1
+    font-size: 3.5rem
