--- a/client/src/shared/styles/TextSection.sass
+++ b/client/src/shared/styles/TextSection.sass
@@ -7,3 +7,10 @@ p
 
 .section-head
   margin-bottom: 2rem
+
+
+@media screen and ( max-width: 448px)
+  p
+    font-size: 1rem
+    letter-spacing: 0.06rem
+    padding-bottom: 0.5rem
