added footer section

--- a/client/src/pages/Home/components/styles/Connect.sass
+++ b/client/src/pages/Home/components/styles/Connect.sass
@@ -98,6 +98,9 @@
   justify-content: space-between
   margin-bottom: 1rem
 
+#connect-section
+  margin-botom: 2rem !important
+
 .connect-status-body
   display: flex
   flex-direction: column
