--- a/client/src/shared/styles/Navigation.sass
+++ b/client/src/shared/styles/Navigation.sass
@@ -1,5 +1,24 @@
+.left
+  position: relative
+  
 .active 
-  text-decoration: underline
+
+  .left:before
+    content: ""
+    position: absolute
+    width: 100%
+    height: 3px
+    bottom: 0
+    left: 0
+    background-color: #000000
+    visibility: visible
+    transition: all 0.3s ease-in-out
+
+.contact-tooltip-item 
+  font-size: 1rem
+
+.nav-link
+  font-size: 1rem
   
 nav
   top: 0
