updated connect styling

--- a/client/src/pages/Home/components/styles/Connect.sass
+++ b/client/src/pages/Home/components/styles/Connect.sass
@@ -73,9 +73,67 @@
   justify-content: center
   align-items: center !important
   text-align: center
-  padding: 1rem 3rem
-  border: none !important
-  width: 100%
+  padding: 2rem
+  border: 5px solid black
+  border-radius: 50% !important
+  width: fit-content
+
+  svg
+    margin: 0
+
+
+
+
+.connect-method-card:hover.email
+  border: 5px solid #405DE6
+  box-shadow: 0 0 15px #405DE6
+  transition: all 0.5s ease
+.connect-method-card:hover .fa-envelope
+  color: #405DE6
+  text-shadow: 0 0 15px #405DE6
+  transition: all 0.5s ease
+
+.connect-method-card:hover.linkedin
+  border: 5px solid #0E76A8
+  box-shadow: 0 0 15px #0E76A8
+  transition: all 0.5s ease
+.connect-method-card:hover .fa-linkedin
+  color: #0E76A8
+  text-shadow: 0 0 15px #0E76A8
+  transition: all 0.5s ease
+
+.connect-method-card:hover.github
+  border: 5px solid #6e5494
+  box-shadow: 0 0 15px #6e5494
+  transition: all 0.5s ease
+.connect-method-card:hover .fa-github
+  color: #6e5494
+  text-shadow: 0 0 15px #6e5494
+  transition: all 0.5s ease
+
+.connect-method-card:hover.instagram
+  border: 5px solid #e1306c
+  box-shadow: 0 0 15px #e1306c
+  transition: all 0.5s ease
+.connect-method-card:hover .fa-instagram
+  color: #e1306c
+  text-shadow: 0 0 15px #e1306c
+  transition: all 0.5s ease
+
+.connect-method-card:hover.twitter
+  border: 5px solid #00aced !important
+  box-shadow: 0 0 15px #00aced
+  transition: all 0.5s ease
+
+
+
+.connect-method-card:hover .fa-twitter 
+  color: #00aced 
+  text-shadow: 0 0 15px #00aced
+  transition: all 0.5s ease
+
+
+
 
 .connect-method-card-label
   padding: 0
@@ -85,11 +143,6 @@
   font-weight: 600 !important
   letter-spacing: 0
   font-size: 0.8rem
-
-
-.connect-method-col
-  padding: 0px !important
-  width: 100%
 
 #connect-method-row
   width: 100%
