setup blog posts and text editor

--- a/client/src/shared/styles/Navigation.sass
+++ b/client/src/shared/styles/Navigation.sass
@@ -38,11 +38,11 @@
 //   width: fit-content
 //   text-decoration: none
 
-ul
-  display: flex
-  justify-content: space-evenly
-  list-style: none
-  padding-left: 0px
+// ul
+//   display: flex
+//   justify-content: space-evenly
+//   list-style: none
+//   padding-left: 0px
 
 a 
   text-decoration: none
