--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,4 +1,10 @@
 // main page container
+$email: #405DE6
+$linkedin: #0E76A8
+$github: #6e5494
+$instagram: #e1306c
+$twitter: #00aced
+
 
 .left
     position: relative
@@ -69,5 +75,8 @@ h6,
 p
   font-weight: 500
 
-a
+a 
   text-decoration: none
+  &:hover
+    color: black
+    text-decoration: none
