basic styling for skill page

--- a/client/src/shared/RenderDraft/components/styles/List.css
+++ b/client/src/shared/RenderDraft/components/styles/List.css
@@ -6,6 +6,11 @@
   transition: all 300ms ease-in;
 }
 
+.list {
+  list-style: circle;
+  padding-left: 1rem;
+}
+
 .animatedList-enter {
   opacity: 0.01;
 }
