--- a/client/src/pages/Home/components/styles/Work.css
+++ b/client/src/pages/Home/components/styles/Work.css
@@ -12,6 +12,11 @@
   font-size: 7rem;
 }
 
+.work-body {
+  font-size: 16px;
+  letter-spacing: normal;
+}
+
 @media screen and ( max-width: 991px) {
   .case-study-links {
     font-size: 5rem;
