--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,148 @@ code {
 .container {
   position: relative;
 }
+
+.left {
+  position: relative;
+}
+
+.left:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #000000;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.left-big {
+  position: relative;
+}
+.left-big:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: #000000;
+  visibility: hidden;
+  transition: all 0.4s ease-in-out;
+}
+
+.left-big:hover:before {
+  visibility: visible;
+  width: 100%;
+}
+
+.left:hover:before {
+  visibility: visible;
+  width: 100%;
+}
+
+.section-container {
+  margin-bottom: 5rem;
+}
+
+.section-head {
+  font-size: 64px;
+  letter-spacing: -3px;
+  margin-bottom: 24px;
+}
+
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+h3 {
+ font-size: 48px;
+}
+
+h6 {
+  font-size: 14px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+button {
+  font-family: 'Manrope', sans-serif !important;
+  color: #000000;
+}
+
+h1,
+h2,
+.extrabold-font {
+  font-weight: 800;
+}
+
+.bold-font {
+  font-weight: 700;
+}
+
+
+h5,
+h6,
+.medium-font {
+  font-weight: 500;
+}
+
+
+p, 
+.regular-font {
+font-weight: 400;
+}
+
+
+.light-font {
+  font-weight: 300;
+}
+
+h3,
+.extralight-font {
+  font-weight: 200;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+
+
+
+.about-body p {
+  font-size: 24px;
+  line-height: 2;
+  padding-bottom: 20px;
+}
+  
+/* .react-rotating-text-cursor {
+  animation: blinking-cursor 0.8s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s infinite;
+}
+
+@keyframes blinking-cursor 
+  0%
+    opacity: 0
+  
+  50%
+    opacity: 1
+  
+  100%
+    opacity: 0 */
+
+    
